removed comment on img tag

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
             <button class="addBtn">Add Button</button>
         </div>
         <div class="imgContainer">
-           <!-- <img src="images/7788.jpg" alt="image of group of students reading"></-->
+           <img src="images/7788.jpg" alt="image of group of students reading">
         </div>
     </div>
     <div class="bookContainer">
         <h3>Your Collections:</h3>
         <div class="books">
             <div class="one">
-                <!--<img src="images/GIU AMA 198-10.jpg" alt="book cover"></!-->
+                <img src="images/GIU AMA 198-10.jpg" alt="book cover">
                 <div>
                     <p>CHIMA OJIMMA PETER</p>
                     <p>THE BEGINNING</p>
