fix the edit books feature

--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
         </div>
     </div>
     <div class="bookContainer">
-        <h3>Your Collections:</h3>
+        <div  class="editContainer">
+            <h3>Your Collections:</h3>
+            <button class="edit">EDIT BOOKS</button>
+        </div>
         <div class="books">
-            
         </div>
     </div>
     <div class="formContainer">
